# mobile_base_msgs

./: CMakeLists.txt  mani_vision.msg  package.xml
mobile_base_msgs/: CMakeLists.txt  README.md
mobile_base_msgs/msg/: RobotControl.msg  RobotState.msg  STMtx.msg  defense_mani_vision.msg  flipper_control_base.msg  flipper_status.msg  vesc_control.msg  vision_path.msg
msg/: DynamixelControl.msg  FlipperControlBase.msg  ManipulatorControl.msg  ManipulatorStatus.msg  RobotCommunication.msg  STMrx.msg  STMtx.msg  VescStatus.msg  bounding_box_array.msg  detect.msg  flipper_control.msg  flipper_status.msg  launch_status.msg  mani_vision.msg  mani_vision_defense.msg  vision_path.msg
msg/defense/: VisionPath.msg
msg/rescue/: BoundingBoxArray.msg  Detect.msg  ManiVision.msg
